--- a/css/attraction.css
+++ b/css/attraction.css
@@ -32,19 +32,23 @@ button{
     border: none;
     color: white; 
     border-radius: 25px; 
-    margin-top: 10px;
+    margin-top: 25px;
     text-align: center;
     margin-bottom: 50px;
     font-size: 25px;
 }
-h3{
+.h3{
     margin-top: 20px;
     color:#724711;
+    font-weight: bold;
 }
 p{
     color: #cc9b02;
-    margin-top: 0px;
-    text-align: center;
+    max-width: 800px;
+    margin: auto;
+    margin-top: 30px;
+
+
 }
 .year{
     color:#724711;
@@ -84,19 +88,22 @@ button{
     border: none;
     color: #724711; 
     border-radius: 25px; 
-    margin-top: 10px;
+    margin-top: 25px;
     text-align: center;
     margin-bottom: 50px;
     font-size: 15px;
 }
-h3{
+.h3{
     margin-top: 20px;
-    color:#3b3b3b;
+    color: #3b3b3b; 
+    font-weight: bold;
 }
 p{
     color: white;
-    margin-top: 0px;
-    text-align: center;
+    max-width: 350px;
+    margin: auto;
+    margin-top: 30px;
+
 }
 
 .image{margin: auto; text-align: center;}
