--- a/css/culture.css
+++ b/css/culture.css
@@ -21,7 +21,7 @@ button{
     border: none;
     color: white; 
     border-radius: 25px; 
-    margin-top: 10px;
+    margin-top: 25px;
     text-align: center;
     margin-bottom: 50px;
     font-size: 25px;
@@ -29,11 +29,15 @@ button{
 h3{
     margin-top: 20px;
     color:#724711;
+    margin: auto;
+
 }
 p{
     color: #cc9b02;
-    margin-top: 25px;
-    text-align: center;
+    /* margin-top: 25px; */
+    max-width: 600px;
+    margin: auto;
+
 }
 .year{
     color:#724711;
@@ -42,12 +46,14 @@ p{
 
 .culture_image{
     max-width: 600px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 
 }
 .image{margin: auto; text-align: center;}
 
 .video{
-    margin: auto; max-width: 600px; text-align: center; margin-top: 55px;
+    margin: auto; max-width: 600px; text-align: center; margin-top: 55px;margin-bottom: 25px;
 }
 .main-content{max-width: 600px; margin: auto; text-align: center;
 }
@@ -75,7 +81,7 @@ button{
     border: none;
     color: #724711; 
     border-radius: 25px; 
-    margin-top: 10px;
+    margin-top: 25px;
     text-align: center;
     margin-bottom: 50px;
     font-size: 15px;
@@ -86,19 +92,23 @@ h3{
 }
 p{
     color: white;
-    margin-top: 15px;
-    text-align: center;
+    /* margin-top: 15px; */
+    max-width: 400px;
+    margin: auto;
+
 }
 
 .culture_image{
     max-width: 400px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 
 }
 .image{margin: auto; text-align: center;}
 
 
 .video{
-    margin: auto; max-width: 400px; text-align: center; margin-top: 55px;
+    margin: auto; max-width: 400px; text-align: center; margin-top: 55px;margin-bottom: 25px;
 }
 h1{
     margin-top: 50px;
