--- a/css/attraction.css
+++ b/css/attraction.css
@@ -37,6 +37,11 @@ button{
     margin-bottom: 50px;
     font-size: 25px;
 }
+
+button:hover{
+    color:#3b3b3b;;
+}
+
 .h3{
     margin-top: 20px;
     color:#724711;
@@ -93,6 +98,11 @@ button{
     margin-bottom: 50px;
     font-size: 15px;
 }
+
+button:hover{
+    color: #cc9b02;;
+}
+
 .h3{
     margin-top: 20px;
     color: #3b3b3b; 
@@ -106,12 +116,17 @@ p{
 
 }
 
+.year{
+    color:#3b3b3b;
+    font-weight: bold;
+}
+
 .image{margin: auto; text-align: center;}
 
 
 h1{
     margin-top: 50px;
-    color:#ffffff;;
+    color:#3b3b3b;
     text-align: center;
     font-weight: bold;
     margin-bottom: 15px;
