--- a/css/timeline.css
+++ b/css/timeline.css
@@ -153,6 +153,10 @@ button{
     margin-bottom: 10px;
     font-size: 25px;
 }
+
+button:hover{
+    color:#3b3b3b;;
+}
 .h3{
     margin-top: 20px;
     color:#724711;
@@ -200,6 +204,10 @@ button{
     margin-bottom: 10px;
     font-size: 15px;
 }
+
+button:hover{
+    color: #cc9b02;;
+}
 .h3{
     margin-top: 20px;
     color:#3b3b3b;
@@ -223,7 +231,7 @@ p{
 
 h1{
     margin-top: 20px;
-    color:#ffffff;
+    color:#3b3b3b;
     text-align: center;
     font-weight: bold;
 }
