--- a/css/Tourist_Attraction.css
+++ b/css/Tourist_Attraction.css
@@ -100,16 +100,27 @@ h2 {
 }
 
 .about-info {
-    margin-bottom: 10px;
-    h3 {
-        text-transform: uppercase;
-    }
+
     p {
+        margin: auto;
         margin-bottom: 20px;
+        max-width: 800px;
+    }
+        
+    .h3{
+        margin: auto;
+        text-transform: uppercase;
+        margin-bottom: 10px;
+        font-weight: bold;
+        font-size: 1rem;
     }
 }
 .about-img {
     position: relative;
+    text-align: center;
+    max-width: 800px;
+    margin: auto;
+    margin-bottom: 30px;
 }
 
 .about-img::before {
@@ -117,7 +128,7 @@ h2 {
     position: absolute;
     width: 100%;
     height: 100%;
-    border: 0.5rem solid var(--clr-primary-5);
+    /* border: 0.5rem solid var(--clr-primary-5); */
     box-sizing: border-box;
     top: -1.5rem;
     left: -1.5rem;
@@ -596,7 +607,7 @@ Hero section1
     .hero-banner h1 {
         color: var(--clr-primary-6);
         text-transform: capitalize;
-        font-size: 1rem;
+        font-size: 2.5rem;
         padding-top: 30vh;
     }
 
