--- a/css/flex.css
+++ b/css/flex.css
@@ -6,7 +6,7 @@
       justify-content: center;
       box-sizing: border-box;
       gap: 50px;
-      margin-bottom: 20px;
+      margin-bottom: 25vh;
   }
   .picture-flex img{
       max-width: 400px;
