--- a/css/Tourist_Attraction.css
+++ b/css/Tourist_Attraction.css
@@ -27,7 +27,7 @@
     --ff-primary : "Poppins", sans-serif;
     --transition : all 0.3s linear;
     --spacing : 0.25rem;
-    --radius : 0.5rem;
+    --radius : 5rem;
     --light-shadow : 0 5px 15px rgba(0,0,0,0.1);
     --dark-shadow : 0 5px 15px rgba(0,0,0,0.2);
     --navbar-Height: 4rem;
@@ -329,7 +329,7 @@ margin-top: 10px;
     align-items: center;
     flex-wrap: wrap;
 }
-.tour-footer-info li{
+.info-footer-info li{
     text-transform: capitalize;
     color: var(--clr-primary-5);
     font-size: 0.75rem;
@@ -431,10 +431,11 @@ navbar
 .nav-icon {
     margin: 5px;
     font-size: 1.3rem;
-    color: var(--clr-primary-8);
+    color: var(--clr-primary-6);
 }
 .nav-icon:hover {
     color: var(--clr-primary-8);
+    transition: var(--transition); 
 
 }
 /* logo img set to 100% of the container */
@@ -570,7 +571,9 @@ Hero section1
 
 .btn {
     text-transform: uppercase;
-    background: var(--clr-primary-5);
+    background: #00b68e;
+    color: #fff;
+    font-weight: bold;
     padding: 0.375rem 0.75rem;
     letter-spacing: var(--clr-spacing);
     display: inline-block;
@@ -582,8 +585,8 @@ Hero section1
 }
 
 .btn:hover {
-    color: var(--clr-primary-9);
-    background: var(--clr-primary-2);
+    color: #005f4b;
+    background: #00ffc8;
 }
 }
 @media(max-width:1033px){
@@ -622,7 +625,9 @@ Hero section1
     
     .btn {
         text-transform: uppercase;
-        background: var(--clr-primary-5);
+        background: #00b68e;
+        color: #fff;
+        font-weight: bold;
         padding: 0.375rem 0.75rem;
         letter-spacing: var(--clr-spacing);
         display: inline-block;
@@ -634,8 +639,8 @@ Hero section1
     }
     
     .btn:hover {
-        color: var(--clr-primary-9);
-        background: var(--clr-primary-2);
+        color: #005f4b;
+        background: #00ffc8;
     }
     
 }
