--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,9 @@
     --clr-white : #fff;
     --ff-primary : "Poppins", sans-serif;
     --transition : all 0.3s linear;
+    --transition-slide: all 0.5s ease-in-out;
     --spacing : 0.25rem;
-    --radius : 0.5rem;
+    --radius : 5rem;
     --light-shadow : 0 5px 15px rgba(0,0,0,0.1);
     --dark-shadow : 0 5px 15px rgba(0,0,0,0.2);
     --navbar-Height: 4rem;
@@ -94,8 +95,15 @@ h2 {
 
 .about-photo {
     width: 100%;
-    height: 100%;
+    height: auto;
     position: relative;
+    border-color: var(--clr-primary-5);
+    border-top-style: none;
+    border-left-style: none;
+    border-right-style: solid;
+    border-bottom-style: solid;
+    border-width: 0.5rem;
+
 }
 
 .about-info {
@@ -116,7 +124,7 @@ h2 {
     position: absolute;
     width: 100%;
     height: 100%;
-    border: 0.5rem solid var(--clr-primary-5);
+    /* border: 0.5rem solid var(--clr-primary-5); */
     box-sizing: border-box;
     top: -1.5rem;
     left: -1.5rem;
@@ -131,7 +139,8 @@ h2 {
     }
     .about-photo{
         width: 100%;
-        height: 75%;
+        height: auto;
+        
     }
     .about-info {
         margin-bottom: 10px;
@@ -218,6 +227,13 @@ article.notice {
     max-width: 1170px;
     margin-bottom: 20px;
 }
+.photo4{
+    width: 47%;
+}
+
+.photo5{
+    width: 47%;
+}
 .info-card:hover{
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
     transform: scale(1.02);
@@ -249,7 +265,8 @@ article.notice {
     padding: 1.25rem 1.5rem;
 }
 .info-footer{
-margin-top: 10px;
+    margin-top: 0;
+    padding: 0px 25px 0;
 }
 .info-footer-info{
     display: flex;
@@ -309,7 +326,8 @@ margin-top: 10px;
     padding: 1.25rem 1.5rem;
 }
 .info-footer{
-margin-top: 10px;
+    margin-top: 0;
+    padding: 0px 25px 0;
 }
 .info-footer-info{
     display: flex;
@@ -317,7 +335,7 @@ margin-top: 10px;
     align-items: center;
     flex-wrap: wrap;
 }
-.tour-footer-info li{
+.info-footer-info li{
     text-transform: capitalize;
     color: var(--clr-primary-5);
     font-size: 0.75rem;
@@ -419,10 +437,11 @@ navbar
 .nav-icon {
     margin: 5px;
     font-size: 1.3rem;
-    color: var(--clr-primary-8);
+    color: var(--clr-primary-6);
 }
 .nav-icon:hover {
     color: var(--clr-primary-8);
+    transition: var(--transition); 
 
 }
 /* logo img set to 100% of the container */
@@ -521,12 +540,18 @@ Hero section1
 ========= */
 
 @media(min-width:1033px){
-.hero {
-    display: flex;
-    height: 85vh;
-    width: 98vw;
-    background: linear-gradient(var(--clr-primary-6), rgba(0, 0, 0, 0.7)), url("../images/Asia-City.jpg") center/cover no-repeat;
-    margin-top: var(--navbar-Height);
+
+.swiper .swiper-button-prev, .swiper .swiper-button-next{
+    color: #fff;
+    padding: 50px;
+}
+
+.swiper .swiper-pagination-bullet-active{
+    background: #fff;
+}
+
+.hero{
+    display: flex;height: 85vh; width: 98vw; margin-top: 4rem;
 }
 .hero-banner {
     width: 100%;
@@ -550,7 +575,9 @@ Hero section1
 
 .btn {
     text-transform: uppercase;
-    background: var(--clr-primary-5);
+    background: #00b68e;
+    color: #fff;
+    font-weight: bold;
     padding: 0.375rem 0.75rem;
     letter-spacing: var(--clr-spacing);
     display: inline-block;
@@ -562,12 +589,21 @@ Hero section1
 }
 
 .btn:hover {
-    color: var(--clr-primary-9);
-    background: var(--clr-primary-2);
+    color: #005f4b;
+    background: #00ffc8;
 }
 }
 @media(max-width:1033px){
-
+    .swiper .swiper-button-prev, .swiper .swiper-button-next{
+        color: #fff;
+        padding: 50px;
+    }
+    
+    .swiper .swiper-pagination-bullet-active{
+        background: #fff;
+    }
+    
+    
     .hero {
         display: flex;
         height: 85vh;
@@ -597,7 +633,9 @@ Hero section1
     
     .btn {
         text-transform: uppercase;
-        background: var(--clr-primary-5);
+        background: #00b68e;
+        color: #fff;
+        font-weight: bold;
         padding: 0.375rem 0.75rem;
         letter-spacing: var(--clr-spacing);
         display: inline-block;
@@ -609,8 +647,8 @@ Hero section1
     }
     
     .btn:hover {
-        color: var(--clr-primary-9);
-        background: var(--clr-primary-2);
+    color: #005f4b;
+    background: #00ffc8;
     }
     
 }
