--- a/css/Tourist_Attraction.css
+++ b/css/Tourist_Attraction.css
@@ -62,6 +62,7 @@ a {
 h2 {
     font-size: 2.5rem;
     letter-spacing: var(--spacing);
+
 }
 .section {
     padding: 5rem, 0;
@@ -74,11 +75,14 @@ h2 {
     margin-bottom: var(--navbar-Height);
 }
 .section-title h2 {
-    padding-top: 20vh;
+    padding-top: 10vh;
     text-transform: uppercase;
     color: var(--clr-primary-9);
 }
 
+#infos-h2{
+    padding-top: 2vh;
+}
 .section-title span {
     color: var(--clr-primary-6);
 }
