--- a/css/attraction.css
+++ b/css/attraction.css
@@ -308,6 +308,8 @@ p{
     max-width: 800px;
     margin: auto;
     margin-top: 30px;
+    font-weight: 400;
+    line-height: 1.5;
 
 
 }
@@ -326,6 +328,8 @@ h1{
     text-align: center;
     font-weight: bold;
     margin-bottom: 15px;
+    font-size: 2.5rem;
+    line-height: 1.2;
 }
 
 
