--- a/css/timeline.css
+++ b/css/timeline.css
@@ -410,13 +410,18 @@ button:hover{
 }
 .h3{
     margin-top: 20px;
-    color:#724711;
+    color: #724711;
     font-weight: bold;
+    font-size: 1.75rem;
+    line-height: 1.2;
+    margin-bottom: .5rem;
 }
 p{
     color: #cc9b02;
     max-width: 800px;
     margin: auto;
+    font-weight: 400;
+    line-height: 1.5;
 }
 .year{
     color:#724711;
@@ -432,6 +437,9 @@ h1{
     color:#724711;
     text-align: center;
     font-weight: bold;
+    margin-bottom: .5rem;
+    line-height: 1.2;
+    font-size: 37.93px;
 }
 
 @media(max-width:1033px){
