--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,7 @@ Hero section1
 
 .btn {
     text-transform: uppercase;
-    background: #00b68e;
+    background: var(--clr-primary-5);
     color: #fff;
     font-weight: bold;
     padding: 0.375rem 0.75rem;
@@ -589,8 +589,8 @@ Hero section1
 }
 
 .btn:hover {
-    color: #005f4b;
-    background: #00ffc8;
+    color:var(--clr-primary-9);
+    background:var(--clr-primary-2);
 }
 }
 @media(max-width:1033px){
@@ -633,7 +633,7 @@ Hero section1
     
     .btn {
         text-transform: uppercase;
-        background: #00b68e;
+        background: var(--clr-primary-5);
         color: #fff;
         font-weight: bold;
         padding: 0.375rem 0.75rem;
@@ -647,8 +647,8 @@ Hero section1
     }
     
     .btn:hover {
-    color: #005f4b;
-    background: #00ffc8;
+    color: var(--clr-primary-9);
+    background: var(--clr-primary-2);
     }
     
 }
