--- a/css/Tourist_Attraction.css
+++ b/css/Tourist_Attraction.css
@@ -619,6 +619,7 @@ Hero section1
         text-transform: capitalize;
         font-size: 2.5rem;
         padding-top: 30vh;
+        text-align: center;
     }
 
     .hero-banner h1 span{
