--- a/css/contact.css
+++ b/css/contact.css
@@ -27,7 +27,7 @@
     --ff-primary : "Poppins", sans-serif;
     --transition : all 0.3s linear;
     --spacing : 0.25rem;
-    --radius : 0.5rem;
+    --radius : 5rem;
     --light-shadow : 0 5px 15px rgba(0,0,0,0.1);
     --dark-shadow : 0 5px 15px rgba(0,0,0,0.2);
     --navbar-Height: 4rem;
@@ -572,6 +572,8 @@ Hero section1
 .btn {
     text-transform: uppercase;
     background: var(--clr-primary-5);
+    color: #fff;
+    font-weight: bold;
     padding: 0.375rem 0.75rem;
     letter-spacing: var(--clr-spacing);
     display: inline-block;
