--- a/css/attraction.css
+++ b/css/attraction.css
@@ -119,7 +119,7 @@ navbar
 ========== */
 .navbar {
     /* fixed the navbar at the top of the page */
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     left: 0;
     /* ============= */
@@ -224,7 +224,7 @@ img.logo-link {
         top:var(--navbar-Height);
         right: -100%;
         width: 100%;
-        height: calc(100vh - var(--navbar-Height));
+        height: calc(200vh - var(--navbar-Height));
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -392,6 +392,7 @@ h1{
     text-align: center;
     font-weight: bold;
     margin-bottom: 15px;
+    padding-top: 50px;
 }
 
 }
