--- a/css/culture.css
+++ b/css/culture.css
@@ -118,7 +118,7 @@ navbar
 ========== */
 .navbar {
     /* fixed the navbar at the top of the page */
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     left: 0;
     /* ============= */
@@ -223,7 +223,7 @@ img.logo-link {
         top:var(--navbar-Height);
         right: -100%;
         width: 100%;
-        height: calc(100vh - var(--navbar-Height));
+        height: calc(200vh - var(--navbar-Height));
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -376,12 +376,28 @@ p{
 
 
 .video{
-    margin: auto; max-width: 400px; text-align: center; margin-top: 55px;margin-bottom: 25px;
+    margin: auto; 
+    max-width: 400px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 25px;
 }
 h1{
     margin-top: 50px;
     color:#3b3b3b;
     text-align: center;
     font-weight: bold;
+    padding-top: 50px;
 }
+}
+@media(max-width:768px){
+    .video{
+        max-width: 350px;
+    }
+    .culture_image{
+        max-width: 350px;
+    }
+    p{
+        margin: 10px;
+    }
 }
