--- a/css/timeline.css
+++ b/css/timeline.css
@@ -118,7 +118,7 @@ navbar
 ========== */
 .navbar {
     /* fixed the navbar at the top of the page */
-    /* position: fixed; */
+    position: fixed;
     top: 0;
     left: 0;
     /* ============= */
@@ -502,6 +502,7 @@ h1{
     }
     #timeline{
         z-index: 2;
+        padding-top: 60px;
     }
     #progressbar{
         z-index: 2;
