--- a/css/Tourist_Attraction.css
+++ b/css/Tourist_Attraction.css
@@ -349,6 +349,7 @@ article.notice {
     text-align: center;
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-top: 1rem;
 }
 .footer-links, .footer-icons{
     display: flex;
