--- a/css/culture.css
+++ b/css/culture.css
@@ -76,6 +76,7 @@ h2 {
     text-align: center;
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-top: 1rem;
 }
 .footer-links, .footer-icons{
     display: flex;
