--- a/css/contact.css
+++ b/css/contact.css
@@ -342,6 +342,7 @@ margin-top: 10px;
     text-align: center;
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-top: 1rem;
 }
 .footer-links, .footer-icons{
     display: flex;
