--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,7 @@ article.notice {
     text-align: center;
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-top: 1rem;
 }
 .footer-links, .footer-icons{
     display: flex;
