--- a/css/timeline.css
+++ b/css/timeline.css
@@ -76,6 +76,7 @@ h2 {
     text-align: center;
     padding-left: 2rem;
     padding-right: 2rem;
+    padding-top: 1rem;
 }
 .footer-links, .footer-icons{
     display: flex;
@@ -506,5 +507,11 @@ h1{
     }
     #progressbar{
         z-index: 2;
+    }
+    p{
+        margin: 25px;
+    }
+    .history_image {
+        max-width: 350px;
     }
 }
