--- a/css/attraction.css
+++ b/css/attraction.css
@@ -313,7 +313,7 @@ p{
     margin-top: 30px;
     font-weight: 400;
     line-height: 1.5;
-
+    padding: 10px;
 
 }
 .year{
@@ -333,6 +333,7 @@ h1{
     margin-bottom: 15px;
     font-size: 2.5rem;
     line-height: 1.2;
+    padding-top: 50px;
 }
 
 
@@ -376,6 +377,7 @@ p{
     max-width: 350px;
     margin: auto;
     margin-top: 30px;
+    padding: 10px;
 
 }
 
