--- a/css/culture.css
+++ b/css/culture.css
@@ -294,6 +294,7 @@ p{
     margin: auto;
     font-weight: 400;
     line-height: 1.5;
+    padding: 10px;
 
 }
 .year{
@@ -322,6 +323,7 @@ h1{
     margin-bottom: .5rem;
     line-height: 1.2;
     font-size: 2.5rem;
+    padding-top: 50px;
 }
 
 
@@ -359,6 +361,7 @@ p{
     /* margin-top: 15px; */
     max-width: 400px;
     margin: auto;
+    padding: 10px;
 
 }
 
@@ -400,5 +403,6 @@ h1{
     }
     p{
         margin: 10px;
+        padding: 10px;
     }
 }
