--- a/css/timeline.css
+++ b/css/timeline.css
@@ -425,6 +425,7 @@ p{
     margin: auto;
     font-weight: 400;
     line-height: 1.5;
+    padding: 10px;
 }
 .year{
     color:#724711;
@@ -443,6 +444,10 @@ h1{
     margin-bottom: .5rem;
     line-height: 1.2;
     font-size: 37.93px;
+}
+
+#timeline{
+    padding-top: 60px;
 }
 
 @media(max-width:1033px){
@@ -478,6 +483,7 @@ p{
     color: white;
     max-width: 400px;
     margin: auto;
+    padding: 10px;
  
 }
 .year{
@@ -496,6 +502,9 @@ h1{
     text-align: center;
     font-weight: bold;
 }
+#timeline{
+    padding-top: 60px;
+}
 }
 @media (max-width: 768px) {
     .switch-title{
@@ -510,6 +519,7 @@ h1{
     }
     p{
         margin: 25px;
+        padding: 10px;
     }
     .history_image {
         max-width: 350px;
