--- a/css/Tourist_Attraction.css
+++ b/css/Tourist_Attraction.css
@@ -591,7 +591,8 @@ img.logo-link {
           padding: 15px 20px;
           font-size: 18px;
           text-align: center;
-          color: var(--clr-primary-9);
+          color:#cc9b02;
+          font-weight: bold;
         }
   
         .mobile-nav-link:hover {
@@ -606,7 +607,8 @@ img.logo-link {
             font-size: 18px;
             text-align: center;
             background-color: var(--clr-gray-3);
-            color: var(--clr-primary-9);
+            color:#cc9b02;
+            font-weight: bold;
           }
     
           .mobile-nav-link-v2:hover {
@@ -621,7 +623,8 @@ img.logo-link {
             font-size: 18px;
             text-align: center;
             background-color: var(--clr-gray-4);
-            color: var(--clr-primary-9);
+            color:#cc9b02;
+            font-weight: bold;
           }
     
           .mobile-nav-link-v3:hover {
@@ -644,6 +647,8 @@ img.logo-link {
           align-items: center;
           justify-content: start;
           z-index: 2;
+          color:#cc9b02;
+          font-weight: bold;
         }
 
           
@@ -782,12 +787,12 @@ img.logo-link {
 
       @media(max-width: 450px){
         .mobile-dropdown-toggle {         
-            width: 150px;
+            width: 130px;
          }
   
             
           #mobile-dropdown-toggle {
-              width: 120px;
+              width: 100px;
           }
       }
 
