--- a/css/contact.css
+++ b/css/contact.css
@@ -585,7 +585,8 @@ img.logo-link {
           padding: 15px 20px;
           font-size: 18px;
           text-align: center;
-          color: var(--clr-primary-9);
+          color:#cc9b02;
+          font-weight: bold;
         }
   
         .mobile-nav-link:hover {
@@ -600,7 +601,8 @@ img.logo-link {
             font-size: 18px;
             text-align: center;
             background-color: var(--clr-gray-3);
-            color: var(--clr-primary-9);
+            color:#cc9b02;
+          font-weight: bold;
           }
     
           .mobile-nav-link-v2:hover {
@@ -615,7 +617,8 @@ img.logo-link {
             font-size: 18px;
             text-align: center;
             background-color: var(--clr-gray-4);
-            color: var(--clr-primary-9);
+            color:#cc9b02;
+          font-weight: bold;
           }
     
           .mobile-nav-link-v3:hover {
@@ -638,6 +641,8 @@ img.logo-link {
           align-items: center;
           justify-content: start;
           z-index: 2;
+          color:#cc9b02;
+          font-weight: bold;
         }
 
           
@@ -776,15 +781,14 @@ img.logo-link {
 
       @media(max-width: 450px){
         .mobile-dropdown-toggle {         
-            width: 150px;
+            width: 130px;
          }
   
             
           #mobile-dropdown-toggle {
-              width: 120px;
+              width: 100px;
           }
       }
-
 
 
 
